portfolio-web/portfolio-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/acme-challenge-type: http01
  name: portfolio

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - portfolio.ujstor.com
    secretName: portfolio-tls
  rules:
  - host: portfolio.ujstor.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-service
            port:
              number: 5000
